Actualizar estilos.css

--- a/estilos.css
+++ b/estilos.css
@@ -1,7 +1,7 @@
 /* Estilo general de la página */
 body {
   font-family: Arial, sans-serif;
-  background-color: #f0f0f0;
+  background-color:#f52f189f235;
   display: flex;
   justify-content: center;
   align-items: center;
